[gd_scene load_steps=12 format=3 uid="uid://b60un4x6w0jyi"]

[ext_resource type="AudioStream" uid="uid://cbgxcobigdiuk" path="res://resources/sounds/Musique_menu_mixage_master_0dB_Low_up.mp3" id="1_jlpwn"]
[ext_resource type="Script" path="res://scene/sound/SoundManager.gd" id="1_wqbob"]
[ext_resource type="AudioStream" uid="uid://b0udvjnbpc35v" path="res://resources/sounds/adventure_test_norme_up_reverb_arrangement_intro.mp3" id="3_4g8a6"]
[ext_resource type="AudioStream" uid="uid://dgpdfchgc8l7v" path="res://resources/sounds/Clic_selection_4.wav" id="3_u4ooe"]
[ext_resource type="AudioStream" uid="uid://m3qjs6ei37m0" path="res://resources/sounds/Victoire_up_6.wav" id="4_uphok"]
[ext_resource type="AudioStream" uid="uid://cyfubs6yrpvbk" path="res://resources/sounds/Feu_maison_1_up.wav" id="5_ong8y"]
[ext_resource type="AudioStream" uid="uid://dm62oncg1amje" path="res://resources/sounds/Feu_maison_2_up.wav" id="6_wpgug"]
[ext_resource type="AudioStream" uid="uid://d0tgcuycnp1iq" path="res://resources/sounds/Feu_maison_3_up.wav" id="7_2rddo"]
[ext_resource type="AudioStream" uid="uid://ca522f4hds24f" path="res://resources/sounds/Defaite_up_.wav" id="8_lgn13"]
[ext_resource type="AudioStream" uid="uid://ciyrs7omp21j1" path="res://resources/sounds/Chat.wav" id="9_cggq6"]
[ext_resource type="AudioStream" uid="uid://3blr4o2ipx6g" path="res://resources/sounds/Pompier_up_doppler_3s50.wav" id="11_vx3kv"]

[node name="SoundManager" type="Node"]
script = ExtResource("1_wqbob")

[node name="music_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_jlpwn")
volume_db = -6.0
bus = &"Music"

[node name="intro_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4g8a6")
volume_db = -12.0
bus = &"Music"

[node name="clic_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_u4ooe")
volume_db = -18.0
bus = &"FX"

[node name="win_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uphok")
volume_db = -12.0

[node name="fire_player_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ong8y")
volume_db = -18.0

[node name="fire_player_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wpgug")
volume_db = -18.0

[node name="fire_player_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2rddo")
volume_db = -18.0

[node name="lose_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lgn13")
volume_db = -12.0

[node name="cat_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_cggq6")

[node name="truck_doppler" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_vx3kv")
volume_db = -6.0
